# hope

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: hope.cfg
cfg/rviz/: hope.rviz
config/: plane_detection_paramenters.yaml
include/hope/: get_cloud.h  high_res_timer.h  palletization.h  plane_segment.h  plane_segment_ros.h  pose_estimation.h  rs_motion.h  transform.h  utilities.h
launch/: hope_palletization.launch  hope_realsense.launch  hope_ros.launch  pub_cloud.launch
msg/: Pose.msg  Subsections.msg
pattern_object/: pattern_object.STL
script/: rs-imu-calibration.py
src/: hope_node.cpp  hope_palletization.cpp  hope_realsense_rpy.cpp  hope_realsense_rpy_ros.cpp  hope_ros.cpp  hope_test.cpp  pub_cloud.cpp  trigger.py  view_cloud.cpp
src/lib/: fetch_rgbd.cpp  fetch_rgbd.h  get_cloud.cpp  get_cloud.h  high_res_timer.cpp  hope.cpp  hope.h  palletization.cpp  palletization.h  plane_segment.cpp  plane_segment.h  plane_segment_ros.cpp  pose_estimation.cpp  pose_estimation.h  rs_motion.cpp  transform.cpp  transform.h  utilities.cpp  utilities.h  z_growing.cpp  z_growing.h
src/lib/fmc/: main_fmc.cpp
srv/: ExtractObjectOnTop.srv  GetObjectPose.srv
